# DecoupledSim

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  sim_wave.vcd
.obsidian/: workspace.json
include/AdaptSim/: vmemory.h
include/AdaptSim/multicore/: cfg.h  core.h  state.h
include/AdaptSim/utils/: difftest.h  disasm.h
lib/: README.md
src/: vmemory.cpp
src/multi-core/: cfg.cpp  core.cpp  state.cpp
src/utils/: difftest.cpp  disasm.cpp
